base.css
body {
  background-color: #E9E9E9;
  font-size: 13px;
  color: #000;
  font-family: "Open Sans", "Helvetica", "Arial", sans-serif;
}
img {
  display: inline-block;
}
h1 {
  text-align: left;
  font-size: 30px;
  color: #000;
}
h2 {
  font-size: 18px;
  color: #000;
  text-transform: uppercase;
  padding-bottom: 0px;
}
b {
  color: #F07241;
}
i {
  color: #3299BB;
}
a:hover {
  color: #BCBCBC;
}
#footer {
  text-align: center;
  bottom: 0px;
  width:100%;
  padding:10px;
}
#side {
  top:0px;
  margin-left:-10px;
  width: 100vw;
  max-height: 100px;
  border: 2px SOLID #BCBCBC;
  background: #fff;
  position: fixed;
  overflow: hidden;
}
#maintext {
  padding: 15px;
  background: #fff;
  border: 2px SOLID #BCBCBC;
  margin: auto;
  height: 100vh;
  width: 850px;
  text-align: left;
  overflow: scroll;
  overflow-x: hidden;
}
.link {
  height: 30px;
  width: 100px;
  font-size: 20px;
  text-decoration: none;
  padding:20px;
  padding-top:0px;
  color: #333344;
}
#description {
  height: 200px;
  width: 600px;
  background: transparent;
  border: 2px solid #BCBCBC;
  padding: 5px;
  overflow: auto;
  margin-left: auto;
  margin-right: auto;
}

